progress continues... getting close to full functionality, before polishing begins

--- a/streamerAppOBS/package.json
+++ b/streamerAppOBS/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "interactjs": "^1.10.27",
     "obs-websocket-js": "^5.0.6",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
