--- a/streamerAppOBS/package.json
+++ b/streamerAppOBS/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "interactjs": "^1.10.27",
+    "marked": "^15.0.0",
     "obs-websocket-js": "^5.0.6",
     "pinia": "^2.2.6",
+    "type-fest": "^4.26.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
