--- a/streamerAppOBS/package.json
+++ b/streamerAppOBS/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@tailwindcss/typography": "^0.5.15",
     "floating-vue": "^5.2.2",
     "interactjs": "^1.10.27",
